# physics-mmast-sim

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/sim-cli/: Cargo.toml
crates/sim-cli/src/: main.rs
crates/sim-core/: Cargo.toml
crates/sim-core/src/: energy.rs  lib.rs  state.rs  time.rs  units.rs
crates/sim-dynamics/: Cargo.toml
crates/sim-dynamics/benches/: solver_bench.rs
crates/sim-dynamics/src/: lib.rs
crates/sim-environment/: Cargo.toml
crates/sim-environment/benches/: atmosphere_bench.rs
crates/sim-environment/src/: atmosphere.rs  atmosphere_lut.rs  lib.rs  ocean.rs  space.rs  terrain.rs
crates/sim-geometry/: Cargo.toml
crates/sim-geometry/src/: hale_uav.rs  lib.rs  mesh_adapter.rs  vehicles.rs
crates/sim-mmast/: Cargo.toml
crates/sim-mmast/src/: ead_ion.rs  lib.rs  lut.rs  metasurface_arc.rs  pv.rs  radiative_cooling.rs  rf_harvest.rs  soaring.rs  spectral_split.rs  vibration_teng.rs  vo2_jacket.rs
crates/sim-render/: Cargo.toml
crates/sim-render/src/: camera.rs  cull.wgsl  culling.rs  instance.rs  lib.rs  mesh.rs  pipeline.rs  scene.rs  shader.wgsl  terrain_compute.rs  terrain_compute.wgsl  vertex.rs
crates/sim-report/: Cargo.toml
crates/sim-report/src/: envelope.rs  envelope_template.html  fleet.rs  fleet_template.html  lib.rs
crates/sim-thermal/: Cargo.toml
crates/sim-thermal/src/: lib.rs
crates/sim-vehicle/: Cargo.toml
crates/sim-vehicle/src/: aero.rs  archetype.rs  lib.rs
crates/sim-viewer/: Cargo.toml
crates/sim-viewer/src/: main.rs
crates/sim-wasm/: Cargo.toml
crates/sim-wasm/src/: lib.rs
