[workspace]
resolver = "2"
members = [
    "crates/sim-core",
    "crates/sim-geometry",
    "crates/sim-vehicle",
    "crates/sim-environment",
    "crates/sim-mmast",
    "crates/sim-thermal",
    "crates/sim-dynamics",
    "crates/sim-render",
    "crates/sim-report",
    "crates/sim-wasm",
    "crates/sim-cli",
    "crates/sim-viewer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Foundation
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math
nalgebra = { version = "0.34.2", features = ["serde-serialize"] }
glam = { version = "0.32", features = ["serde"] }

# Parallel compute
rayon = "1.10"

# Async
tokio = { version = "1.50", features = ["full"] }

# WebGPU
wgpu = "25"
winit = "0.30"

# WASM
wasm-bindgen = "0.2.115"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlCanvasElement",
    "GpuAdapter", "GpuDevice", "GpuCanvasContext",
    "Performance", "Navigator",
] }
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Serialization
flatbuffers = "25.12"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Testing
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

# ---- CadFuture crates (the lab's computable-world-model engine) ----
# Git deps for portability; local development overrides them to the working
# tree via `.cargo/config.toml` ([paths]) — mirrors the cad-future↔hyperdb setup.
physical-brep         = { git = "https://github.com/dcharlot-physicalai-bmi/cad-future" }
physical-tessellation = { git = "https://github.com/dcharlot-physicalai-bmi/cad-future" }
physical-fea          = { git = "https://github.com/dcharlot-physicalai-bmi/cad-future" }

# ---- internal crates ----
sim-core        = { path = "crates/sim-core" }
sim-geometry    = { path = "crates/sim-geometry" }
sim-vehicle     = { path = "crates/sim-vehicle" }
sim-environment = { path = "crates/sim-environment" }
sim-mmast       = { path = "crates/sim-mmast" }
sim-dynamics    = { path = "crates/sim-dynamics" }
sim-render      = { path = "crates/sim-render" }
sim-report      = { path = "crates/sim-report" }
sim-thermal     = { path = "crates/sim-thermal" }

[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
