[package]
name = "sim-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for headless MMAST simulation runs, parameter sweeps, and report generation"

[[bin]]
name = "mmast-sim"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }

sim-core = { workspace = true }
sim-vehicle = { workspace = true }
sim-environment = { workspace = true }
sim-mmast = { workspace = true }
sim-dynamics = { workspace = true }
sim-report = { workspace = true }
