[package]
name = "sim-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Foundation types, units, time, and the simulation state bus"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
