[package]
name = "sim-vehicle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Vehicle archetypes — parameterized models for atmospheric, aquatic, space, and ground platforms"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
nalgebra = { workspace = true }
glam = { workspace = true }

sim-core = { workspace = true }
sim-geometry = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
