[package]
name = "sim-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM boundary — single entry point for browser, exposes solver + renderer"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
getrandom = { workspace = true }

sim-core = { workspace = true }
sim-vehicle = { workspace = true }
sim-environment = { workspace = true }
sim-mmast = { workspace = true }
sim-dynamics = { workspace = true }
sim-report = { workspace = true }
